tests/baselines/reference/parserMemberAccessorDeclaration9.errors.txt
==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration9.ts (2 errors) ====
    class C {
        static public get Foo() { }
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
                          ~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
    }